<resources>
    <string name="app_name">CV Builder</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_career_history">Career History</string>
    <string name="menu_work_history">Work Experience</string>
    <string name="menu_about">About Me</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_education_training">Education</string>
<!--    <string name="menu_technical_skills">Technical Skills &amp; Language</string>-->
    <string name="menu_technical_skills">Technical Skills</string>
    <string name="contact">Contact Me</string>
    <string name="degree">Licenciado en Analisis de Sistemas (UBA)</string>
    <string name="letter">Soy Sebastian Corradi, Licenciado en Sistemas de la UBA y desarrollador android por los ultimos 8 años, proactivo, curioso y colaborador con mis colegas y nuestra comunidad\nEl objetivo de esta aplicación es mostrar implementaciones básicas de distintas librerías y tecnologías en una aplicación con el código disponible en github.\nEn mi perfil de github también pueden encontrar algunos componentes desarrollados por mi.</string>


    <string name="image_description">Image using in this app</string>

    <string name="details">Details</string>
    <string name="profile">Profile</string>
    <string name="links">Links</string>
    <string name="languages">Languages</string>

    <string name="choose_email_client">Choose Email Client</string>
    <string name="technical_skills">Technical skills</string>
    <string name="key_achievements">Key Achievements</string>

    <string name="hyphen">-</string>
    <string name="two_points">:</string>

    <string name="about_fragment">About Fragment</string>
    <string name="contact_fragment">Contact Fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="work_fragment">Work Fragment</string>

    <string name="login_email">Email address (required)</string>
    <string name="login_password">Password (required)</string>
    <string name="login_email_hint">abc@test.com</string>
    <string name="login_password_hint">*******</string>
    <string name="login_btn">Sign In</string>
    <string name="login_don_t_have_an_account_yet">Don\'t have an account?</string>
    <string name="login_link_sign_up">Create a new account</string>
    <string name="login_forgot_your_password">Forgot your password?</string>

    <string name="activity_login_auto_hint_email">Email</string>
    <string name="activity_login_auto_hint_password">Password</string>
    <string name="dialog_base_url_auto_hint_url">Url</string>

    <string name="activity_language_content_description_back_button">Back Button</string>
    <string name="activity_language_content_description_amharic">Amharic</string>
    <string name="activity_language_content_description_english">English</string>
    <string name="activity_login_content_description_logo">Logo</string>
    <string name="activity_settings_content_description_back_button">Back Button</string>
    <string name="activity_splash_content_description_logo">Logo</string>
    <string name="fragment_no_internet_content_description_no_internet">No Internet Connection Image</string>
    <string name="item_application_content_description_continue_button">Continue Button</string>
    <string name="layout_no_internet_content_description_logo">Logo</string>
    <string name="login_title">Sign in to your account</string>
    <string name="divider">divider</string>
    <string name="electronics">Electronics</string>
    <string name="clothes">Clothes</string>
    <string name="beauty">Beauty</string>
    <string name="food">Food</string>
    <string name="create_your_account">Create your account</string>
    <string name="first_name">First name*</string>
    <string name="last_name">Last name*</string>
    <string name="password">Password*</string>
    <string name="create_account">Create Account</string>
    <string name="email_address">Email address*</string>
    <string name="color_color">Color: color</string>
    <string name="my_name">Alagie F Nget</string>
    <string name="my_email">alagie10@gmail.com</string>

</resources>